--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -11,7 +11,7 @@ management:
 eureka:
   client:
     service-url:
-      default-zone: http://${EUREKA_SERVER_URL:localhost}:8761/eureka
+      default-zone: http://eureka-server:8761/eureka
   instance:
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${random.value}
